hphp/hack/test/typecheck/do2.php.exp
File "do2.php", line 19, characters 12-13:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
File "do2.php", line 24, characters 14-15:
Assignments can no longer be used as expressions. Pull the assignment out into a separate statement. (Parsing[1002])
